Additional work on MekWars and removal of deprecations in MM.